# tidal_dl

./: apiKey.py  decryption.py  pyproject.toml
lang/: dutch.py
tidal_dl/: __init__.py  apiKey.py  enums.py  model.py  printf.py  tidal.py  util.py
tidal_dl/lang/: arabic.py  chinese.py  croatian.py  czech.py  danish.py  dutch.py  english.py  filipino.py  french.py  german.py  hungarian.py  italian.py  japanese.py  korean.py  portuguese.py  spanish.py  vietnamese.py
