[tool.poetry]
name = "tidal-dl"
version = "1.0.1"
description = ""
authors = ["rf0x3d <yarekfrolov@gmail.com>"]
readme = "README.md"
packages = [{include = "tidal_dl"}]

[tool.poetry.scripts]
tidal_dl = "tidal_dl:main"

[tool.poetry.dependencies]
python = "^3.8"
lyricsgenius = "^3.0.1"
pycryptodome = "^3.18.0"
pycryptodomex = "^3.18.0"
aigpy = "^2022.7.8.1"
prettytable = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
